Fix .foot_list z-index

--- a/sass/ergo.scss
+++ b/sass/ergo.scss
@@ -15,3 +15,7 @@
     object-fit: cover;
   }
 }
+
+.foot_list {
+  z-index: 80;
+}
